# roblox_agency

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LAUNCH.md  README.md  architecture.md  description.md  launch.ps1  launch.sh  pyproject.toml
.claude/: settings.json  settings.local.json
client/: .env.example  index.html  vite.config.ts
webui/: LAUNCH.md  README.md  launch.ps1  launch.sh  pyproject.toml
webui/client/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
webui/client/src/: App.tsx  design-system.css  index.css  main.tsx  router.tsx  types.ts
webui/client/src/components/git/: BranchBadge.tsx  CommitList.tsx  PRCard.tsx
webui/client/src/components/layout/: PageShell.tsx  Sidebar.tsx  TopBar.tsx
webui/client/src/components/md/: DiffView.tsx  MarkdownEditor.tsx  MarkdownView.tsx  SplitPane.tsx
webui/client/src/components/run/: AgentTimeline.tsx  LogStream.tsx  ProgressRing.tsx  TaskBoard.tsx
webui/client/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  Input.tsx  Modal.tsx  Spinner.tsx  index.ts
webui/client/src/hooks/: useGames.ts  useGit.ts  useRun.ts  useWebSocket.ts
webui/client/src/pages/: Config.tsx  GameDetail.tsx  LiveEdit.tsx  LiveRun.tsx  Projects.tsx  Prompt.tsx  RepoExplorer.tsx  Schedule.tsx
webui/client/src/store/: gameStore.ts  runStore.ts  wsStore.ts
webui/server/: config.py  main.py
webui/server/db/: __init__.py  init_db.py
webui/server/models/: game.py  run.py  schedule_entry.py
webui/server/routes/: cfg.py  edits.py  files.py  games.py  git.py  runs.py  schedule.py  specs.py  ws.py
webui/server/services/: git_service.py  markdown.py  mcp_registry.py  process.py  repo.py  scheduler.py
(+226 files in other folders)
